--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
     <div class="flex">
       <div id="rhythm">
         <select name="rhythmSelector" id="rhythmSelector">
-          <option value="Disco1">Disco 1</option>
-          <option value="Metal1">Metal 1</option>
-          <option value="Rock1">Rock 1</option>
-          <option value="SlowWaltz1">Slow waltz 1</option>
-          <optgroup label="Greek">
+          <optgroup label="Pop/Rock">
+            <option value="Disco1">Disco 1</option>
+            <option value="Metal1">Metal 1</option>
+            <option value="Rock1">Rock 1</option>
+          </optgroup>
+          <optgroup label="Ballroom Dancing">
+            <option value="ChaChaCha1">Cha Cha Cha 1</option>
+            <option value="SlowWaltz1">Slow waltz 1</option>
+            <option value="Tango1">Tango 1</option>
+          </optgroup>
+          <optgroup label="Greek Dancing">
             <option value="Kalamatianos1">Kalamatianos 1</option>
             <option value="Roumba1">Roumba 1</option>
             <option value="Tsamikos1">Tsamikos 1</option>
