random zeibekiko added

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <option value="Tsifteteli2">Tsifteteli 2</option>
             <option value="Zeibekiko1">Zeibekiko 1</option>
             <option value="Zeibekiko2">Zeibekiko 2</option>
+            <option value="RandomZeibekiko">Random Zeibekiko</option>
           </optgroup>
         </select>
         <button type="button" id="loadRhythmButton">Load</button>
