--- a/index.html
+++ b/index.html
@@ -22,12 +22,20 @@
             <option value="Metal1">Metal 1</option>
             <option value="Rock1">Rock 1</option>
           </optgroup>
-          <optgroup label="Ballroom Dancing">
+          <optgroup label="Ballroom/Latin">
             <option value="ChaChaCha1">Cha Cha Cha 1</option>
+            <option value="Jive1">Jive 1</option>
+            <option value="PasoDoble1">Paso doble 1</option>
+            <option value="PasoDoble2">Paso doble 2</option>
+            <option value="Quickstep1">Quickstep 1</option>
+            <option value="Rumba1">Rumba 1</option>
+            <option value="Samba1">Samba 1</option>
             <option value="SlowWaltz1">Slow waltz 1</option>
+            <option value="Slowfox1">Slowfox 1</option>
             <option value="Tango1">Tango 1</option>
+            <option value="VienneseWaltz1">Viennese waltz 1</option>
           </optgroup>
-          <optgroup label="Greek Dancing">
+          <optgroup label="Greek">
             <option value="Kalamatianos1">Kalamatianos 1</option>
             <option value="Roumba1">Roumba 1</option>
             <option value="Tsamikos1">Tsamikos 1</option>
