--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <option value="Disco1">Disco 1</option>
             <option value="Metal1">Metal 1</option>
             <option value="Rock1">Rock 1</option>
+            <option value="Rock2">Rock 2</option>
           </optgroup>
           <optgroup label="Ballroom/Latin">
             <option value="ChaChaCha1">Cha Cha Cha 1</option>
@@ -37,6 +38,8 @@
           </optgroup>
           <optgroup label="Greek">
             <option value="Kalamatianos1">Kalamatianos 1</option>
+            <option value="Karsilamas1">Karsilamas 1</option>
+            <option value="Karsilamas2">Karsilamas 2</option>
             <option value="Roumba1">Roumba 1</option>
             <option value="Tsamikos1">Tsamikos 1</option>
             <option value="Tsifteteli1">Tsifteteli 1</option>
@@ -66,17 +69,25 @@
       <div id="input">
         <label for="inputSelector">Input</label>
         <select name="inputSelector" id="inputSelector">
-          <option value="1">Normal hit</option>
-          <option value="2">Soft hit</option>
-          <option value="3">Hard hit</option>
-          <option value="4">Very soft hit</option>
-          <option value="5">Very hard hit</option>
-          <option value="6">Flam</option>
-          <option value="7">Additional normal hit</option>
-          <option value="8">Additional soft hit</option>
-          <option value="9">Additional hard hit</option>
-          <option value="10">Only odd measures</option>
-          <option value="11">Only even measures</option>
+          <optgroup label="Always played">
+            <option value="1">Normal hit</option>
+            <option value="2">Soft hit</option>
+            <option value="3">Hard hit</option>
+            <option value="4">Very soft hit</option>
+            <option value="5">Very hard hit</option>
+            <option value="6">Flam</option>
+          </optgroup>
+          <optgroup label="Depends on Preferences">
+            <option value="7">Additional normal hit</option>
+            <option value="8">Additional soft hit</option>
+            <option value="9">Additional hard hit</option>
+          </optgroup>
+          <optgroup label="Only played when condition is true">
+            <option value="10">Measure is even</option>
+            <option value="11">Measure is not even</option>
+            <option value="12">Previous measure ends with fill</option>
+            <option value="13">Prev measure doesn't end with fill</option>
+          </optgroup>
         </select>
       </div>
       <button type="button" id="startStopButton">Start/Stop</button>
@@ -84,24 +95,30 @@
 
     <fieldset>
       <legend>Measure</legend>
-      <button type="button" id="previousMeasureButton">Previous</button>
-      <button type="button" id="nextMeasureButton">Next</button>
-      <button type="button" id="clearMeasureButton">Clear</button>
-      <button type="button" id="addMeasureButton">Add</button>
-      <button type="button" id="deleteMeasureButton">Delete</button>
-      <button type="button" id="addBeatButton">Add beat</button>
-      <button type="button" id="deleteBeatButton">Delete beat</button>
-      <button type="button" id="addDivisionButton">Add div</button>
-      <button type="button" id="deleteDivisionButton">Delete div</button>
+      <div>
+        <button type="button" id="previousMeasureButton">Previous</button>
+        <button type="button" id="nextMeasureButton">Next</button>
+        <button type="button" id="clearMeasureButton">Clear</button>
+        <button type="button" id="addMeasureButton">Add</button>
+        <button type="button" id="deleteMeasureButton">Delete</button>
+        <button type="button" id="addBeatButton">Add beat</button>
+        <button type="button" id="deleteBeatButton">Delete beat</button>
+        <button type="button" id="addDivisionButton">Add div</button>
+        <button type="button" id="deleteDivisionButton">Delete div</button>
+      </div>
       <div id="copyMeasure">
         <button type="button" id="copyMeasureButton">Copy</button>
         <input type="text" id="copyMeasureFrom" name="copyMeasureFrom" value="1"></input>
         <label for="copyMeasureTo">to</label>
         <input type="text" id="copyMeasureTo" name="copyMeasureTo" value="1"></input>
       </div>
+      <div id="measureEndsWithFill">
+        <label for="endsWithFill">Ends with fill</label>
+        <input type="checkbox" id="endsWithFill" name="endsWithFill" />
+      </div>
     </fieldset>
-    <fieldset  class="flex">
-      <legend>Options</legend>
+    <fieldset>
+      <legend>Preferences</legend>
       <div id="additional">
         <select name="additionalSelector" id="additionalSelector">
           <option value="0">Never</option>
