added debugging and handled timing issues

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1>DR by Fred Bolder</h1>
   </header>
   <main>
+    <div id="message"></div>
     <div class="flex">
       <div id="rhythm">
         <select name="rhythmSelector" id="rhythmSelector">
