confirm box added and used for Delete measure

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DR by Fred Bolder</title>
   <link rel="stylesheet" href="./main.css" />
+  <link rel="stylesheet" href="./dialogs.css" />
 </head>
 
 <body>
+  <div id="confirm" class="confirm">
+    <p id="confirmMessage"></p>
+    <button id="confirmYes">Yes</button>
+    <button id="confirmNo">No</button>
+  </div>
   <header>
     <h1>DR by Fred Bolder</h1>
   </header>
