position of confirm box fixed

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 </head>
 
 <body>
-  <div id="confirm" class="confirm">
-    <p id="confirmMessage"></p>
-    <button id="confirmYes">Yes</button>
-    <button id="confirmNo">No</button>
+  <div id="confirmOverlay">
+    <div id="confirmBox">
+      <p id="confirmMessage"></p>
+      <button id="confirmYes">Yes</button>
+      <button id="confirmNo">No</button>
+    </div>
   </div>
   <header>
     <h1>DR by Fred Bolder</h1>
