--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
   </div>
   <header>
-    <h1>DR by Fred Bolder</h1>
+    <h1>DR2 by Fred Bolder</h1>
   </header>
   <main>
     <div id="message"></div>
