more confirms added

--- a/index.html
+++ b/index.html
@@ -10,15 +10,8 @@
 </head>
 
 <body>
-  <div id="confirmOverlay">
-    <div id="confirmBox">
-      <p id="confirmMessage"></p>
-      <button id="confirmYes">Yes</button>
-      <button id="confirmNo">No</button>
-    </div>
-  </div>
   <header>
-    <h1>DR4 by Fred Bolder</h1>
+    <h1>DR by Fred Bolder</h1>
   </header>
   <main>
     <div id="message"></div>
@@ -111,8 +104,8 @@
         <button type="button" id="deleteMeasureButton">Delete</button>
         <button type="button" id="addBeatButton">Add beat</button>
         <button type="button" id="deleteBeatButton">Delete beat</button>
-        <button type="button" id="addDivisionButton">Add div</button>
-        <button type="button" id="deleteDivisionButton">Delete div</button>
+        <button type="button" id="incDivisionButton">Inc div</button>
+        <button type="button" id="decDivisionButton">Dec div</button>
       </div>
       <div id="copyMeasure">
         <button type="button" id="copyMeasureButton">Copy</button>
