patterns added, smooth closing of open hi-hat

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
             <option value="Kalamatianos1">Kalamatianos 1</option>
             <option value="Karsilamas1">Karsilamas 1</option>
             <option value="Karsilamas2">Karsilamas 2</option>
+            <option value="PalioZeibekiko1">Palio Zeibekiko 1</option>
             <option value="Roumba1">Roumba 1</option>
+            <option value="Tik1">Tik 1</option>
+            <option value="Tsakonikos1">Tsakonikos 1</option>
+            <option value="Tsakonikos2">Tsakonikos 2</option>
             <option value="Tsamikos1">Tsamikos 1</option>
             <option value="Tsifteteli1">Tsifteteli 1</option>
             <option value="Tsifteteli2">Tsifteteli 2</option>
@@ -156,6 +160,9 @@
       </div>
     </fieldset>
   </main>
+
+  <button type="button" id="testButton" hidden>TEST</button>
+
   <script type="module" src="./modules/script.js"></script>
 </body>
 
