pattern added and save to file test

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
           </optgroup>
           <optgroup label="Greek">
             <option value="Kalamatianos1">Kalamatianos 1</option>
+            <option value="Kamilierikos1">Kamilierikos 1</option>
+            <option value="Kamilierikos2">Kamilierikos 2</option>
             <option value="Karsilamas1">Karsilamas 1</option>
             <option value="Karsilamas2">Karsilamas 2</option>
             <option value="PalioZeibekiko1">Palio Zeibekiko 1</option>
@@ -95,6 +97,7 @@
           </optgroup>
         </select>
       </div>
+      <button type="button" id="saveButton">Save</button>
       <button type="button" id="startStopButton">Start/Stop</button>
     </div>
 
