aptaliko added, debugging for save file

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <option value="VienneseWaltz1">Viennese waltz 1</option>
           </optgroup>
           <optgroup label="Greek">
+            <option value="Aptaliko1">Aptaliko 1</option>
             <option value="Kalamatianos1">Kalamatianos 1</option>
             <option value="Kamilierikos1">Kamilierikos 1</option>
             <option value="Kamilierikos2">Kamilierikos 2</option>
