--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <h1>DR2 by Fred Bolder</h1>
+    <h1>DR by Fred Bolder</h1>
   </header>
   <main>
     <div id="message"></div>
@@ -98,7 +98,10 @@
           </optgroup>
         </select>
       </div>
-      <button type="button" id="saveButton">Save</button>
+      <div>
+        <button type="button" id="saveButton">Save</button>
+        <button type="button" id="openButton">Open</button>
+      </div>
       <button type="button" id="startStopButton">Start/Stop</button>
     </div>
 
