--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <div id="message"></div>
     <p>
       This is the online version of <a href="https://www.dansblad.nl/dr/" target="_blank">DR for windows</a>.
-      Keep in mind that there are many differences including the file format. If you are interested in Greek rhythms, make sure to 
-      check out my ebook <a href="https://www.dansblad.nl/grdrums/" target="_blank">Greek Dance Rhythms for Drums</a> with
+      Keep in mind that there are many differences including the file format. If you are interested in Greek rhythms,
+      make sure to
+      check out my ebook <a href="https://www.dansblad.nl/grdrums/" target="_blank">Greek Dance Rhythms for Drums</a>
+      with
       more than 1080 patterns.
       Send an e-mail to <a href="mailto:fgh.bolder@gmail.com">fgh.bolder@gmail.com</a> for
       questions.
@@ -32,6 +34,7 @@
             <option value="Metal2">Metal 2</option>
             <option value="Rock1">Rock 1</option>
             <option value="Rock2">Rock 2</option>
+            <option value="RockBallad1">Rock ballad 1</option>
           </optgroup>
           <optgroup label="Ballroom/Latin">
             <option value="ChaChaCha1">Cha Cha Cha 1</option>
@@ -70,6 +73,10 @@
         </select>
         <button type="button" id="loadRhythmButton">Load</button>
       </div>
+      <div>
+        <button type="button" id="openButton">Open</button>
+        <button type="button" id="saveButton">Save</button>
+      </div>
       <div id="tempo">
         <label for="tempoSlider">Tempo</label>
         <input type="range" min="10" max="750" value="100" id="tempoSlider">
@@ -80,6 +87,11 @@
         <input type="range" min="0" max="100" value="75" id="volumeSlider">
         <div id="volumeValue"></div>
       </div>
+    </div>
+    <div id="measuresToPlay">
+      <label for="measuresToPlayInput">Measures to play (empty=all)</label>
+      <input type="text" id="measuresToPlayInput" name="measuresToPlayInput" value="">
+      <label>Example: 1, 1, 1, 3, 2, 2, 2, 4</label>
     </div>
     <div>
       <canvas id="pattern"></canvas>
@@ -110,15 +122,15 @@
         </select>
       </div>
       <div>
-        <button type="button" id="saveButton">Save</button>
-        <button type="button" id="openButton">Open</button>
+        <label for="loop">Loop</label>
+        <input type="checkbox" id="loop" name="loop" checked>
       </div>
       <button type="button" id="startStopButton">Start/Stop</button>
     </div>
 
     <fieldset>
       <legend>Measure</legend>
-      <div>
+      <div class="buttonGroup">
         <button type="button" id="previousMeasureButton">Previous</button>
         <button type="button" id="nextMeasureButton">Next</button>
         <button type="button" id="clearMeasureButton">Clear</button>
@@ -131,13 +143,13 @@
       </div>
       <div id="copyMeasure">
         <button type="button" id="copyMeasureButton">Copy</button>
-        <input type="text" id="copyMeasureFrom" name="copyMeasureFrom" value="1"></input>
+        <input type="text" id="copyMeasureFrom" name="copyMeasureFrom" value="1">
         <label for="copyMeasureTo">to</label>
-        <input type="text" id="copyMeasureTo" name="copyMeasureTo" value="1"></input>
+        <input type="text" id="copyMeasureTo" name="copyMeasureTo" value="1">
       </div>
       <div id="measureEndsWithFill">
         <label for="endsWithFill">Ends with fill</label>
-        <input type="checkbox" id="endsWithFill" name="endsWithFill" />
+        <input type="checkbox" id="endsWithFill" name="endsWithFill">
       </div>
     </fieldset>
     <fieldset>
