many patterns added, flam time calculation changed

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       with
       more than 1080 patterns.
       Send an e-mail to <a href="mailto:fgh.bolder@gmail.com">fgh.bolder@gmail.com</a> for
-      questions.
+      questions or feedback.
     </p>
     <div class="flex">
       <div id="rhythm">
