--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
         <label>Example: 1, 1, 1, 3, 2, 2, 2, 4</label>
       </div>
     </div>
-    <div>
+    <div style="position: relative; display: inline-block;">
       <canvas id="pattern"></canvas>
+      <canvas id="overlay" style="position: absolute; top: 0; left: 0; pointer-events: none;"></canvas>
     </div>
     <div class="flex">
       <div id="input">
