--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <h1>DR2 by Fred Bolder</h1>
+    <h1>DR by Fred Bolder</h1>
   </header>
   <main>
     <div id="message"></div>
