daouli and patterns added

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <option value="9">Additional hard hit</option>
           </optgroup>
           <optgroup label="Only played when condition is true">
-            <option value="10">Measure is even</option>
-            <option value="11">Measure is not even</option>
+            <option value="10">Normal hit when measure is even</option>
+            <option value="11">Normal hit when measure is not even</option>
             <option value="12">Previous measure ends with fill</option>
             <option value="13">Prev measure doesn't end with fill</option>
           </optgroup>
