ghost notes bug fixed, tests made, ruff improved

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         <input type="checkbox" id="loop" name="loop" checked>
       </div>
       <button type="button" id="startStopButton">Start/Stop</button>
+      <button type="button" id="testButton" hidden>TEST</button>
     </div>
 
     <fieldset>
