--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <option value="4">Very soft hit</option>
             <option value="5">Very hard hit</option>
             <option value="6">Flam</option>
-            <option value="14">Ruff</option>
+            <option value="14">4 stroke ruff</option>
           </optgroup>
           <optgroup label="Depends on Preferences">
             <option value="7">Additional normal hit</option>
