drums can now be played with the keyboard

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./main.css" />
 </head>
 
-<body>
+<body id="body">
   <header>
     <h1>DR by Fred Bolder</h1>
   </header>
@@ -68,6 +68,9 @@
     <div style="position: relative; display: inline-block;">
       <canvas id="pattern"></canvas>
       <canvas id="overlay" style="position: absolute; top: 0; left: 0; pointer-events: none;"></canvas>
+    </div>
+    <div id="keyInfo">
+      You can also play an instrument by pressing the key that is indicated behind it.
     </div>
     <div class="flex">
       <div id="input">
