manual playing improved

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <canvas id="overlay" style="position: absolute; top: 0; left: 0; pointer-events: none;"></canvas>
     </div>
     <div id="keyInfo">
-      You can also play an instrument by pressing the key that is indicated behind it.
+      You can also play an instrument by pressing the key that is indicated behind it or by clicking on the name.
     </div>
     <div class="flex">
       <div id="input">
