mute, solo, volume, pitch and pan added

--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
         <label for="loop">Loop</label>
         <input type="checkbox" id="loop" name="loop" checked>
       </div>
+      <div class="checkboxGroup">
+        <label for="showSettings">Show settings</label>
+        <input type="checkbox" id="showSettings" name="showSettings">
+      </div>
       <button type="button" id="startStopButton">Start/Stop</button>
       <button type="button" id="testButton" hidden>TEST</button>
     </div>
