--- a/index.html
+++ b/index.html
@@ -59,18 +59,41 @@
           <option value="1">Greek percussion</option>
         </select>
       </div>
-      <div id="measuresToPlay">
-        <label for="measuresToPlayInput">Measures to play (empty=all)</label>
-        <input type="text" id="measuresToPlayInput" name="measuresToPlayInput" value="">
-        <label>Example: 1, 1, 1, 3, 2, 2, 2, 4</label>
-      </div>
+      <fieldset>
+        <legend>Reverb</legend>
+        <div id="reverbType">
+          <label for="reverbTypeSelector">Type</label>
+          <select name="reverbTypeSelector" id="reverbTypeSelector">
+            <option value="0">Hall 1</option>
+            <option value="1">Hall 2</option>
+            <option value="2">Plate 1</option>
+            <option value="3">Plate 2</option>
+            <option value="4">Room 1</option>
+            <option value="5">Room 2</option>
+            <option value="6">Spring</option>
+          </select>
+        </div>
+        <div id="reverbWet">
+          <label for="reverbWetSlider">Wet %</label>
+          <input type="range" min="0" max="100" value="15" id="reverbWetSlider">
+          <div id="reverbWetValue"></div>
+        </div>
+      </fieldset>
+      <fieldset>
+        <legend>Measures to play (empty=all)</legend>
+        <div id="measuresToPlay">
+          <input type="text" id="measuresToPlayInput" name="measuresToPlayInput" value="">
+          <label>Example: 1, 1, 1, 3, 2, 2, 2, 4</label>
+        </div>
+      </fieldset>
     </div>
     <div style="position: relative; display: inline-block;">
       <canvas id="pattern"></canvas>
       <canvas id="overlay" style="position: absolute; top: 0; left: 0; pointer-events: none;"></canvas>
     </div>
     <div id="keyInfo">
-      You can also play an instrument by pressing the key that is indicated behind it (shift=louder) or by clicking on the name.
+      You can also play an instrument by pressing the key that is indicated behind it (shift=louder) or by clicking on
+      the name.
     </div>
     <div class="flex">
       <div id="input">
