volumes increased and spring reverbs added

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
             <option value="3">Plate 2</option>
             <option value="4">Room 1</option>
             <option value="5">Room 2</option>
+            <option value="6">Spring 1</option>
+            <option value="7">Spring 2</option>
           </select>
         </div>
         <div id="reverbWet">
