filters improved, distortion added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </header>
   <main>
     <div id="message"></div>
+    <!-- <canvas id="curve"></canvas> -->
     <p>
       This is the online version of <a href="https://www.dansblad.nl/dr/" target="_blank">DR for windows</a>.
       Keep in mind that there are many differences including the file format. If you are interested in Greek rhythms,
@@ -63,7 +64,7 @@
         <legend>Measures to play (empty=all)</legend>
         <div id="measuresToPlay">
           <input type="text" id="measuresToPlayInput" name="measuresToPlayInput" value="">
-          <label>Example: 1, 1, 1, 3, 2, 2, 2, 4</label>
+          <label for="measuresToPlayInput">Example: 1, 1, 1, 3, 2, 2, 2, 4</label>
         </div>
       </fieldset>
     </div>
