distortion curves added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </header>
   <main>
     <div id="message"></div>
+    <!-- Only for developing -->
     <!-- <canvas id="curve"></canvas> -->
     <p>
       This is the online version of <a href="https://www.dansblad.nl/dr/" target="_blank">DR for windows</a>.
