improved performance for manual playing 2

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body id="body">
   <div id="mainScreen">
     <header>
-      <h1>DR 3 by Fred Bolder</h1>
+      <h1>DR by Fred Bolder</h1>
     </header>
     <main>
       <div id="message"></div>
