Bulgarian rhythms added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body id="body">
   <div id="mainScreen">
     <header>
-      <h1>DR 2 by Fred Bolder</h1>
+      <h1>DR by Fred Bolder</h1>
     </header>
     <main>
       <div id="message"></div>
@@ -34,6 +34,7 @@
             <option value="PopRock">Pop/Rock</option>
             <option value="BallroomLatin">Ballroom/Latin</option>
             <option value="Greek">Greek</option>
+            <option value="Bulgarian">Bulgarian</option>
           </select>
           <select name="rhythmSelector" id="rhythmSelector">
             <option value="init">init</option>
