--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
       <div style="position: relative; display: inline-block;">
         <canvas id="pattern"></canvas>
-        <canvas id="overlay" style="position: absolute; top: 0; left: 0; pointer-events: none;"></canvas>
+        <div id="overlay" style="position: absolute; top: 0; left: 0; pointer-events: none;"></div>
       </div>
       <div id="keyInfo">
         You can also play an instrument by pressing the key that is indicated behind it (shift=louder) or by clicking on
