--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DR by Fred Bolder</title>
-  <link rel="stylesheet" href="./main.css" />
+  <link rel="stylesheet" href="./main.css?v=2">
 </head>
 
 <body id="body">
   <div id="mainScreen">
     <header>
-      <h1>DR by Fred Bolder</h1>
+      <h1>DR 2 by Fred Bolder</h1>
     </header>
     <main>
       <div id="message"></div>
@@ -259,7 +259,7 @@
     <button type="button" id="playScreenToMainScreenButton">Back to main screen</button>
     <canvas id="canvasPlayScreen"></canvas>
     </div>
-  <script type="module" src="./modules/script.js"></script>
+  <script type="module" src="./modules/script.js?v=2"></script>
 </body>
 
 </html>
