cursor changes for new phones 7

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DR by Fred Bolder</title>
-  <link rel="stylesheet" href="./main.css?v=4">
+  <link rel="stylesheet" href="./main.css?v=6">
 </head>
 
 <body id="body">
   <div id="mainScreen">
     <header>
-      <h1>DR 4 by Fred Bolder</h1>
+      <h1>DR 5 by Fred Bolder</h1>
     </header>
     <main>
       <div id="message"></div>
@@ -71,8 +71,8 @@
           </div>
         </fieldset>
       </div>
-      <div style="position: relative; display: inline-block;">
-        <div id="overlay" style="position: absolute; top: 0; left: 0; pointer-events: none;"></div>
+      <div id="patternContainer">
+        <div id="overlay"></div>
         <canvas id="pattern"></canvas>
       </div>
       <div id="keyInfo">
@@ -259,7 +259,7 @@
     <button type="button" id="playScreenToMainScreenButton">Back to main screen</button>
     <canvas id="canvasPlayScreen"></canvas>
     </div>
-  <script type="module" src="./modules/script.js?v=4"></script>
+  <script type="module" src="./modules/script.js?v=6"></script>
 </body>
 
 </html>
