--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DR by Fred Bolder</title>
-  <link rel="stylesheet" href="./main.css?v=16">
+  <link rel="stylesheet" href="./main.css?v=17">
 </head>
 
 <body id="body">
   <div id="mainScreen">
     <header>
-      <h1>DR 16 by Fred Bolder</h1>
+      <h1>DR by Fred Bolder</h1>
     </header>
     <main>
       <div id="message"></div>
@@ -257,8 +257,8 @@
   <div id="playScreen">
     <button type="button" id="playScreenToMainScreenButton">Back to main screen</button>
     <canvas id="canvasPlayScreen"></canvas>
-    </div>
-  <script type="module" src="./modules/script.js?v=16"></script>
+  </div>
+  <script type="module" src="./modules/script.js?v=17"></script>
 </body>
 
 </html>
