cache problem solved, bucimis rhythm added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
   <title>DR by Fred Bolder</title>
-  <link rel="stylesheet" href="./main.css?v=17">
+  <link rel="stylesheet" href="./main.css?v=18">
 </head>
 
 <body id="body">
@@ -258,7 +261,7 @@
     <button type="button" id="playScreenToMainScreenButton">Back to main screen</button>
     <canvas id="canvasPlayScreen"></canvas>
   </div>
-  <script type="module" src="./modules/script.js?v=17"></script>
+  <script type="module" src="./modules/script.js?v=18"></script>
 </body>
 
 </html>
